# IOT_C_Programming_Project_Exercises

./: Readme.md
AirlineSeatManager/: CMakeLists.txt  Readme.md  airline_seat_manager.c  reservations.csv
CSVReader/: CMakeLists.txt  Temperatures.csv  csv_reader.c
CarSales/: CMakeLists.txt  Readme.md  car_sales.c  car_sales.csv
RepositoryManager/: CMakeLists.txt  Readme.md  repository_manager.c
StudentGradeCalculator/: CMakeLists.txt  student_grade_calculator.c
StudyPlanner/: CMakeLists.txt  study_planner.c
TranscriptPrinter/: CMakeLists.txt  Readme.md  student_db.txt  transcript_printer.c
